fixes header overlap problem

--- a/sass/parts/header.scss
+++ b/sass/parts/header.scss
@@ -53,7 +53,7 @@
             position: absolute;
             background-color: transparent;
             z-index: 3;
-            display: inline-block;
+            display: none;
             width: 75%;
             top: -80px;
             left: 36%;
